# LLM-Data-Quality-Guardian

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
data/sample/: documents.csv  facts.json  notes.txt  queries.txt
guardian/: __init__.py  cli.py  models.py  pipeline.py
guardian/alerts/: __init__.py  base.py  console.py  webhook.py
guardian/dashboard/: __init__.py  app.py
guardian/drift/: __init__.py  cosine.py  detector.py  ks_test.py  mmd.py
guardian/embeddings/: __init__.py  cache.py  manager.py
guardian/hallucination/: __init__.py  ambiguity.py  contradiction.py  detector.py  sparse.py  temporal.py
guardian/ingestion/: __init__.py  base.py  csv_loader.py  json_loader.py  text_loader.py
guardian/quality/: __init__.py  checks.py  soda_runner.py
guardian/rag/: __init__.py  chunking.py  context.py  retrieval.py
guardian/storage/: __init__.py  metrics_store.py  vectorstore.py
tests/: conftest.py  test_drift.py  test_hallucination.py  test_ingestion.py  test_quality.py  test_rag.py  test_storage.py
