[project]
name = "llm-data-quality-guardian"
version = "0.1.0"
description = "Data quality monitoring pipeline for LLM/RAG systems: semantic drift, hallucination patterns, and more"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "plotly>=5.18.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]

[project.scripts]
guardian = "guardian.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["guardian"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
